--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
         </section>
         <section>
-            <h2>МІа Рамарі - Між сірими днями і дощем</h2>
+            <h2>Міа Рамарі - Між сірими днями і дощем</h2>
             <audio controls src="audio/my_music.mp3">
                 Ваш браузер не підтримує тег audio.
             </audio>
